# MyMengMedia

./: build.gradle  dependencies.gradle  generate_header.sh  my_meng_media.jks  notes.md  settings.gradle
app/: build.gradle
app/jnilibs/ffmpeg/arm64-v8a/include/libavcodec/: mathops.h  mediacodec.h
app/jnilibs/ffmpeg/arm64-v8a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/jnilibs/ffmpeg/armeabi-v7a/include/libavcodec/: vdpau.h
app/jnilibs/ffmpeg/armeabi-v7a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/jnilibs/ffmpeg/x86/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/jnilibs/ffmpeg/x86_64/include/libavcodec/: avcodec.h
app/jnilibs/ffmpeg/x86_64/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/androidTest/java/cn/skullmind/mbp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/: cn_skullmind_mbp_OSInfo_Companion.h
app/src/main/java/cn/skullmind/mbp/: FirstFragment.kt  MainActivity.kt  OSInfo.kt  SecondFragment.kt
app/src/main/java/cn/skullmind/mbp/audio/: AudioActivity.kt  AudioJob.kt
app/src/main/java/cn/skullmind/mbp/ffmpeg_info/: FFmpegInfoActivity.kt  OSInfo.kt
app/src/main/java/cn/skullmind/mbp/media/: AudioCoder.kt  MediaPlayer.kt  MediaRecorder.kt  MediaRecorderContext.kt  MyMengMediaPlayer.kt
app/src/main/java/cn/skullmind/mbp/transcode/: FFMpeg.kt  FilterEnum.kt  TransCodeActivity.kt
app/src/main/java/cn/skullmind/mbp/utils/: FileUtils.kt
app/src/main/jni/: CMakeLists.txt  Transcode.cpp  audio-recorder.cpp  media-player.cpp  native-lib.cpp  video-capture.cpp
app/src/main/jni/bean/: ImageDef.h
app/src/main/jni/ffmpeg/: cmdutils.c  cmdutils.h  config.h  ffmpeg.c  ffmpeg.h  ffmpeg_info.cpp  ffmpeg_info.h
app/src/main/jni/glm/detail/: dummy.cpp
app/src/main/jni/include/: cn_skullmind_mbp_OSInfo.h  cn_skullmind_mbp_ffmpeg_info_OSInfo.h  cn_skullmind_mbp_ffmpeg_info_OSInfo_Companion.h  cn_skullmind_mbp_media_AudioCoder.h  cn_skullmind_mbp_media_AudioCoder_Companion.h  cn_skullmind_mbp_media_MediaPlayer.h  cn_skullmind_mbp_media_MediaPlayer_Companion.h  cn_skullmind_mbp_media_MediaRecorderContext.h  cn_skullmind_mbp_media_MediaRecorderContext_Companion.h  cn_skullmind_mbp_media_VideoCapture.h  cn_skullmind_mbp_transcode_FFMpeg.h  cn_skullmind_mbp_transcode_FFMpeg_Companion.h
app/src/main/jni/player/: MyMengPlayer.cpp  MyMengPlayer.h
app/src/main/jni/player/decoder/: AudioDecoder.cpp  AudioDecoder.h  BaseDecoder.cpp  BaseDecoder.h  Decoder.h  VideoDecoder.h
app/src/main/jni/player/render/: BaseGLRender.h
app/src/main/jni/player/render/audio/: AudioFrame.h  AudioGLRender.cpp  AudioGLRender.h  OpenSLRender.cpp  OpenSLRender.h
app/src/main/jni/player/render/video/: VideoRender.h
app/src/main/jni/recorder/: AudioRecorder.cpp  MediaRecorderContext.cpp
app/src/main/jni/recorder/include/: AudioRecorder.h  MediaRecorderContext.h
app/src/main/jni/render/: BaseGLRender.h
app/src/main/jni/render/audio/: AudioFrame.cpp  AudioFrame.h  AudioGLRender.cpp  AudioGLRender.h  AudioRender.cpp  AudioRender.h  OpenSLRender.cpp
app/src/main/jni/utils/: Log.cpp
app/src/main/jni/utils/include/: Log.h  ThreadSafeQueue.h
app/src/main/res/drawable/: shape_divider_rect.xml  shape_rectangle_corner_red_outline.xml
app/src/main/res/layout/: activity_audio.xml  activity_ffmpeg_info.xml  activity_main.xml  activity_trans_code.xml  content_main.xml  item_ffmpeg_func.xml  item_ffmpeg_transcode_file.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/cn/skullmind/mbp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
